Modify to EJS template

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,7 +6,7 @@
   <meta name="description" content="">
   <meta name="author" content="Vinicius Jadiscke de Souza Tasso">
 
-  <title>Personal Portfolio</title>
+  <title>Vinicius's Portfolio</title>
 
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -48,45 +48,3 @@
       </nav>
     </div>
   </section>
-
-
-  <!-- Who am i section! -->
-  <section id="iam">
-    <div class="container-fluid container-all">
-      <div class="row">
-        <div class="col-lg-6 px-5">
-          <h1>Vinicius J. S. Tasso</h1>
-          <p class="subtitle">Full Stack Web Developer.</p>
-        </div>
-        <div class="col-lg-6 px-5 py-5">
-          <!-- <h1><i class="fas fa-code"></i></h1> -->
-          <img src="images/logo.png" alt="">
-        </div>
-
-        <div class="col-12 description">
-          <p>{ Age : 23, UndergraduantionIn : Industrial Engineering, Country : Brazil, Job : Full Stack Web Developer }</p>
-        </div>
-
-      </div>
-    </div>
-  </section>
-
-  <section id="portfolio">
-    <div class="container-fluid container-all">
-      <h2>Project Portfolio</h2>
-
-    </div>
-
-  </section>
-
-  <section id="contact">
-    <div class="container-fluid container-all">
-      <h2>Contact me!</h2>
-
-    </div>
-  </section>
-
-
-</body>
-
-</html>
