--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,9 +2,14 @@ h1 {
   line-height: 2;
   font-size: 2.5rem;
   font-weight: 900;
-  padding-top: 10%;
+  padding-top: 15%;
 }
 
+h2 {
+  line-height: 2;
+  font-size: 2rem;
+  padding-bottom: 50;
+}
 
 
 body {
@@ -17,14 +22,15 @@ body {
 /* Containers */
 
 .container-all {
-  padding: 7% 15%;
+  padding: 3% 15%;
 }
 
 
 /* Sections */
 
 #contact,
-#navigation-bar {
+#navigation-bar,
+footer {
   background-color: #333333;
   color:#ffffff;
 }
@@ -74,6 +80,32 @@ body {
   font-size: 1.4rem;
 }
 
+/* Contact */
+#contact form {
+  margin: auto;
+  text-align: left;
+}
+#contact form label {
+  padding-left: 0;
+  font-size: 1.4rem;
+  line-height: 2;
+
+}
+#contact .div {
+  text-align: left;
+}
+
+#contact form {
+  margin-top: 15px;
+  max-width: 600px;
+  min-width: 300px;
+  justify-content: center;
+}
+
+#contact div.button-r {
+  text-align: right;
+}
+
 /* Medium and Large Screen Sizes */
 
 
@@ -84,6 +116,11 @@ body {
   h1 {
     font-size: 2.5rem;
     line-height: 3;
+  }
+
+  h2 {
+    font-size: 2.5rem;
+
   }
 
   .fa-code {
