--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,7 +32,7 @@
   <section id="contact">
     <div class="container-fluid container-all">
       <h2>Contact me!</h2>
-      <%- include('contact') -%>
+      <%- include('contact', {messageStatus:  messageStatus }); -%>
 
     </div>
   </section>
