Add DOTENV, Modify CSS, mailchimp module Add

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
         </div>
 
         <div class="col-12 description">
-          <p>{ Age : 23, UndergraduantionIn : Industrial Engineering, Country : Brazil, Job : Full Stack Web Developer }</p>
+          <p>{ Age : 23, UndergraduantionIn : "Industrial Engineering", Country : "Brazil", Job : "Full Stack Web Developer" }</p>
         </div>
 
       </div>
